--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,21 @@ en:
           attributes:
             name:
               blank: Name field cannot be blank
+  clients_controller:
+    status:
+      accepted: Accepted
+      pending: Pending
+    delete_error: The client could not be deleted.
+    delete_success: The client has been successfully deleted.
+    destroy: Are you sure you want to delete this client?
+    description: In this section, you can view and invite your clients
+    invite_button: Invite
+    invite_error: There was an error inviting the client.
+    invite_success: Client successfully invited.
+    no_clients_message: You have not invited any clients yet, you can do so by pressing the Invite button
+    no_clients_title: No Clients
+    not_found_or_no_permission: The client was not found or you do not have permission to delete it.
+    title: Client Listing
   dashboard_controller:
     agency: Agency
     description: Have a global view of all your data.
@@ -38,6 +53,7 @@ en:
     daily_summary: Summary
     date: Date
     first_name: First Name
+    last_name: Surname
     group: Group
     group_title: Group Title
     info: Information
@@ -115,6 +131,8 @@ en:
       send_instructions: You will receive an email with instructions for unlocking your account in a few minutes.
       send_paranoid_instructions: If your account exists, you will receive an email with instructions for unlocking your account in a few minutes.
       unlocked: Your account has been unlocked. Please sign in to continue.
+  devise_invitations:
+    title: Complete your registration
   email_changed:
     email_being_changed: We're contacting you to notify that your email is being changed to %{email}.
     email_changed: We're contacting you to notify that your email has been changed to %{email}.
@@ -127,9 +145,14 @@ en:
     email_to_confirm: "An email to confirm an email. 🤪"
     help_needed: Need help?
     or_verify_link: 'Or verify using this link:'
-    send_feedback: Please send any feedback or error information to <a href='mailto:info@example.com' style='color:#2F67F6'>info@example.com</a>
+    send_feedback: Please send any feedback or error information to <a href='mailto:info@castvault.com' style='color:#2F67F6'>info@example.com</a>
     validate_email: Please validate your email address to start using Metricgram.
     yes_we_know: Yes, we know.
+  email_invitation:
+    button_text: Accept Invitation
+    introduction: You have been invited by %{name} to join their network, with this access you will be able to view the albums they want to share with you on Castvault.
+    or_copy_and_past_with_this_link: 'Or copy and paste this link into your browser:'
+    title: Invitation to Castvault
   errors:
     attributes:
       name:
@@ -288,16 +311,25 @@ en:
       confirm_button: Confirm
       title: Confirmation
   labels:
+    accept_invitation: Accept Invitation
     all: All
+    already_have_an_account: Already have an account?
     back_button: Back
     close: Close
     current_password: Current password
+    email: Email
+    first_name: First Name
+    last_name: Last Name
+    log_in: Log in
     password: New password
     password_confirmation: Confirm password
     results: Results
     save: Save
     search: Search
     send: Send
+    sign_in: Sign in
+    sign_up: Sign up
+    sign_up_to_castvault: Sign up to CastVault
     update: Update
   landing_pricing_component:
     annually: Annually
@@ -501,6 +533,10 @@ en:
     ignore_message: If you didn't request this, please ignore this email.
     instruction: Someone has requested a link to change your password. You can do this through the link below.
     password_change_confirmation: Your password will not change until you access the above link and create a new one.
+  sessions:
+    forgot_password: Forgot password?
+    sign_in_to_your_account: Sign in to your account
+    sign_up_now: Sign up now!
   settings_controller:
     delete_account: Delete account
     delete_account_confirmation: Yes, delete my account
@@ -520,22 +556,22 @@ en:
     errors:
       cant_be_blank: This field cannot be blank
       file_too_large: The file is too large. Maximum allowed size is %{max_size}.
-      invalid_email: The email is not valid
-      invalid_integer: The value is not a valid integer
       invalid_date: The date is not valid
-      invalid_format: "Invalid format. Allowed formats are: %{formats}."
-      invalid_string_length: The length of the text must be between %{min} and %{max} characters
+      invalid_email: The email is not valid
+      invalid_format: 'Invalid format. Allowed formats are: %{formats}.'
+      invalid_integer: The value is not a valid integer
       invalid_selection: The selection is invalid
-      out_of_range: "Is out of range (must be between %{min} and %{max})"
+      invalid_string_length: The length of the text must be between %{min} and %{max} characters
+      out_of_range: Is out of range (must be between %{min} and %{max})
   thank_you_page:
-    title: Thank You!
-    message: Thank you for your interest! Your information has been sent successfully.
     home: Home
+    message: Thank you for your interest! Your information has been sent successfully.
+    title: Thank You!
   unlock_instructions:
     instruction: Your account has been locked due to an excessive number of failed login attempts.
     unlock_account_button: Unlock my account
     unlock_account_button_instructions: 'Click the link below to unlock your account:'
   upload_file_component:
-    upload_a_file: Upload a file
-    or_drag_and_drop: or drag and drop
     accepted_types_message: "%{types} up to %{max_size}MB"
+    or_drag_and_drop: or drag and drop
+    upload_a_file: Upload a file
